Fixed extra white space on mobile screen, cases list responsove

--- a/_includes/clients/clients.scss
+++ b/_includes/clients/clients.scss
@@ -30,7 +30,7 @@
 
     .clients-block {
       display: grid;
-      grid-template-columns: 560px 500px;
+      grid-template-columns: repeat(2, calc(50% - 10px));
       grid-column-gap: 20px;
       margin-top: 120px;
       align-items: center;
