--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -44,6 +44,7 @@ body {
 }
 
 .section {
+  overflow: hidden;
   padding: 142px 0;
 
   @include tablet-screen {
@@ -65,6 +66,10 @@ body {
   .content {
     margin: 0 auto;
     max-width: 1200px;
+
+    @include small-desktop-screen {
+      max-width: 960px;
+    }
   }
 
   &.section-dark {
